--- a/issue-notes/4.md
+++ b/issue-notes/4.md
@@ -1,4 +1,9 @@
 # issue linterエラーが出ている #4
 [issues #4](https://github.com/cat2151/display-image-1sec/issues/4)
 
+# 対策
+- agentに投げた
+- 結果、解決した
+
+# closeとする
 
