--- a/issue-notes/2.md
+++ b/issue-notes/2.md
@@ -1,4 +1,50 @@
 # issue 当該pngがdir構成見直し等でrenameやmoveされたときexceptionで落ち、userが混乱する #2
 [issues #2](https://github.com/cat2151/display-image-1sec/issues/2)
 
+# どうする？
+- 設計の候補を洗い出す:
+    - 対象:
+        - pngなしエラーが発生した場合
+            - ※運用上、発生しうる。
+                - ※当アプリの実行中にも、発生しうる。
 
+# 候補
+## エラーメッセージ
+- exceptionで落とすとき、
+    - 「再生成を行ってください」
+    - というエラーメッセージを出すようにする
+    - メリット
+        - シンプルである
+        - userが対応しやすい
+    - 課題
+        - issueの「userが混乱する」は、軽減はされるが、
+            - 根本的な解決ではない
+## 自動
+- pngなしエラーが発生したとき、
+    - 再生成を自動で行う
+    - ボツ案、`img = Image.open(image_path)`をtry～catchで囲み、呼び出し元にFalseでreturnし、
+        - さらに呼び出し元に伝播していく
+            - 問題、複雑。そこまでコストをかけるのはオーバーエンジニアリングな感触がする
+- デメリット、課題
+    - ふわっとしている
+    - そもそもこのサーバにpipeで接続アプリがどうなるかが未定義である
+        - 例えば、芋づる式にエラーで落ちていくので、自動でやっても意味がない、という可能性がある
+## いいとこ取り
+- 再生成は行う。tomlに、commandを書いて、それをエラー時に実行する、これで再生成される
+- エラーメッセージは出す:
+    - 再生成しました
+    - 再起動してください
+- その上でexceptionで落とす
+- メリット
+    - シンプル
+    - user作業負荷が軽減される
+
+## 発展型
+- いいとこ取り、の上で、exceptionで落とす直前に、当pyを別processで起動する、そしてexceptionで落とす
+- メリット
+    - 自動、user負荷の最小化が見込める
+- デメリット
+    - 複雑、想定通り動かないリスクがある、未知数、検証が必要
+
+# どうする？
+- いいとこ取り案をまず試す。成功のち、発展型を試す
